# rust-template

./: .gitignore  CONTRIBUTING.md  LICENSE-APACHE  LICENSE-MIT  README.md
.github/: FUNDING.yml
.github/workflows/: generate.yaml
template/: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  cargo-generate.toml
template/.github/: FUNDING.yml
template/.github/workflows/: cicd.yaml
template/src/: lib.rs  main.rs
