[package]
name = "{{project-name}}"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
# Warning https://doc.rust-lang.org/cargo/reference/manifest.html#the-authors-field
#authors = ["{{owner}}"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]{% if use-deps %}
{%- if crate_type == "bin" %}
anyhow = { version = "1" }
{%- else %}
thiserror= { version = "1" }
{%- endif %}
human-panic = "1"
lazy_static = "1.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"{%- endif %}

# See more at https://github.com/johnthagen/min-sized-rust
[profile.release]
#codegen-units = 1
lto = true
opt-level = "s"
strip = true

{% if crate_type == "lib" -%}[lib]
crate-type = ["rlib"]
{% endif %}